2-kube-patterns/namespace-v1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legacy
  labels:
    app: adapter
