2-kube-patterns/namespace-v2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-policy
  labels:
    app: server
