2-kube-patterns/adapter-v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: legacy
spec:
  containers:
  - name: app
    image: alpine:3.9.2
    command: ["/bin/sh", "-c"]
    # output legacy formatted metrics every 5 seconds
    args:
    - mkdir /metrics;
      while true; do
        date > /metrics/raw.txt;
        top -n 1 -b >> /metrics/raw.txt;
        sleep 5;
      done
