2-kube-patterns/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: network-policy
  labels:
    app: server
    region: us-central
  name: server
spec:
  containers:
  - name: server
    image: busybox:1.30.1
    ports:
    - containerPort: 8888
    # Listen on port 8888
    command: ["/bin/sh", "-c"]
    # -v for verbose mode
    args: ["nc -p 8888 -v -lke echo Received request"]
    readinessProbe:
      tcpSocket:
        port: 8888
---
apiVersion: v1
kind: Service
metadata:
  namespace: network-policy
  labels:
    app: server
  name: server
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: server
---
apiVersion: v1
kind: Pod
metadata:
  namespace: network-policy
  labels:
    app: client
    region: us-east
  name: client-1
spec:
  containers:
  - name: client
    image: busybox:1.30.1
    # Send requests to server every 1 seconds
    command: ["/bin/sh", "-c"]
    args: ["while true; do sleep 1; nc $SERVER_SERVICE_HOST $SERVER_SERVICE_PORT; done"]
---
apiVersion: v1
kind: Pod
metadata:
  namespace: network-policy
  labels:
    app: client
    region: us-west
  name: client-2
spec:
  containers:
  - name: client
    image: busybox:1.30.1
    # Send requests to server every 1 seconds
    command: ["/bin/sh", "-c"]
    args: ["while true; do sleep 1; nc $SERVER_SERVICE_HOST $SERVER_SERVICE_PORT; done"]
